src/css/ProjectGrid.css
.ProjectGrid-main {
  background-color: #282c34;
  border-radius: 0.5vw;
  display: flex;
  justify-content: center;
  cursor: default;
  overflow: hidden;
  position: relative;
}

.ProjectGrid-Image {
  display: flex;
  flex: 1;
  height: 100%;
  align-items: center;
  justify-content: center;
}

.ProjectGrid-details {
  width: 100%;
  height: 100%;
  position: absolute;
  border-radius: 0.5vw;
  background-color: rgba(0, 128, 128, 0.8);
  right: -100%;
  transition: 0.5s;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.ProjectGrid-main:hover .ProjectGrid-details {
  right: 0px;
  transition: 0.5s;
}

a {
  color: yellow;
  font-weight: bold;
}

p {
  align-self: flex-start;
}

